review comments
Signed-off-by: matthew brian white <whitemat@uk.ibm.com>